--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  scroll-behavior: smooth;
+  scroll-padding-top: 185px;
+}
+
 body {
   background-color: #D4D4D4;
 }
